avoid selecting non-unicode fonts as fallback fonts. fixing bug 330715. r=mrbkap